vid-app-helm-chart/templates/mongodb-vids-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb-vids
  name: mongodb-vids
  #namespace: mongo-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo:latest
          name: mongodbvids
          ports:
            - containerPort: 27017
      restartPolicy: Always
      hostNetwork: true
status: {}
