vid-app-helm-chart/templates/mongodb-vids-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongodb-vids
  #namespace: mongo-namespace
spec:
  ports:
    #- name: "http"
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: mongo
  type: LoadBalancer
status:
  loadBalancer: {}
