vid-app-helm-chart/templates/sparkvid-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    k.image-pull-policy: Always
    k.service.type: Nodeport
    k.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.k.service: sparkvid-api
  name: sparkvid-api
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.k.service: sparkvid-api
  type: NodePort
status:
  loadBalancer: {}
